// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom background - new way 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": 1,
      "file": "Test App ßW-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
    },
  ],
}
`;

exports[`disable dmg icon (light), bundleVersion 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": 1,
      "file": "Test App ßW-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
    },
  ],
}
`;

exports[`license en 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": 1,
      "file": "Test App ßW-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
    },
  ],
}
`;

exports[`license ru 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": 1,
      "file": "Test App ßW-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
    },
  ],
}
`;

exports[`multi language license 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": 1,
      "file": "Test App ßW-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
    },
  ],
}
`;

exports[`no Applications link 1`] = `
Array [
  Object {
    "x": 110,
    "y": 150,
  },
  Object {
    "path": "/Applications/TextEdit.app",
    "type": "link",
    "x": 410,
    "y": 440,
  },
]
`;

exports[`no Applications link 2`] = `
Object {
  "mac": Array [
    Object {
      "arch": 1,
      "file": "NoApplicationsLink-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
    },
    Object {
      "arch": 1,
      "file": "NoApplicationsLink-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
    },
  ],
}
`;

exports[`no background 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": 1,
      "file": "NoBackground-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
    },
  ],
}
`;

exports[`no build directory 1`] = `undefined`;

exports[`no build directory 2`] = `
Object {
  "mac": Array [
    Object {
      "arch": 1,
      "file": "NoBuildDirectory-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
    },
  ],
}
`;

exports[`unset dmg icon 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": 1,
      "file": "Test ß No Volume Icon-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
    },
  ],
}
`;
